<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="liushilive.github.io.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_webview"
            android:name="liushilive.github.io.ui.webview.WebviewFragment"
            android:label="@string/menu_webview"
            tools:layout="@layout/fragment_webview"/>

    <fragment
            android:id="@+id/nav_dsc"
            android:name="liushilive.github.io.ui.dsc.DSCFragment"
            android:label="@string/menu_dsc"
            tools:layout="@layout/fragment_dsc"/>
</navigation>