<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/button_long_press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/long_press"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_score"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_crash"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/crash"
        app:layout_constraintEnd_toStartOf="@+id/button_not_responding"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_long_press"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_not_responding"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/not_responding"
        app:layout_constraintBottom_toBottomOf="@+id/button_crash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_crash"
        app:layout_constraintTop_toTopOf="@+id/button_crash"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/time_selection"
        app:layout_constraintBottom_toBottomOf="@+id/button_long_press"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_long_press" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText_name">

        <RadioButton
            android:id="@+id/radioButton_man"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/radioButton_woman"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/woman" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_self_score"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_years_of_working"
        tools:ignore="MissingConstraints" />

    <SeekBar
        android:id="@+id/seekBar_years_of_working"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="false"
        android:max="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_years_of_working"
        app:layout_constraintTop_toBottomOf="@+id/button_date_selection"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner_native_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/spinner_native_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/editText_name"
        android:text="@string/name"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/editText_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sex"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/native_place"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_native_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner_native_place" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/birthdate"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/textView_birthdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_birthdate" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/years_of_working"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/textView_years_of_working"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_years_of_working"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/self_score"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/textView_self_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_self_score"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/signature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_crash"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_years_of_working"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_years_of_working"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/seekBar_years_of_working"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_self_score"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_score"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/seekBar_score"
        tools:ignore="MissingConstraints" />

    <liushilive.github.io.view.FingerView
        android:id="@+id/fingerView_signature"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FF000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView_birthdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="17dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/button_date_selection"
        app:layout_constraintEnd_toStartOf="@+id/button_date_selection"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/button_date_selection" />

    <Button
        android:id="@+id/button_date_selection"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/date_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_native_place" />

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/button_long_press"
        app:layout_constraintEnd_toStartOf="@+id/button_time"
        app:layout_constraintStart_toEndOf="@+id/button_long_press"
        app:layout_constraintTop_toTopOf="@+id/button_long_press" />

</androidx.constraintlayout.widget.ConstraintLayout>